gitlab/gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: devops
spec:
  selector:
    matchLabels:
      app: gitlab
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - image: 10.235.9.36:30002/library/gitlab/gitlab-ce:14.10.2-ce.0
        name: gitlab
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 30013
          name: gitlab443
        - containerPort: 30011
          name: gitlab80
        - containerPort: 22
          name: gitlab22
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-persistent
          subPath: config
        - mountPath: /var/log/gitlab
          name: gitlab-persistent
          subPath: log
        - mountPath: /var/opt/gitlab
          name: gitlab-persistent
          subPath: data
      volumes:
      - name: gitlab-persistent
        persistentVolumeClaim:
          claimName: gitlab-glusterfs-pvc
      nodeSelector:
        tool: monitor
      tolerations:
        - key: "node-role.kubernetes.io/app"
          operator: "Exists"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: devops
spec:
  type: NodePort
  ports:
  - port: 30012
    targetPort: 30012
    name: gitlab22
    nodePort: 30012
  - port: 30013
    targetPort: 30013
    name: gitlab443
    nodePort: 30013
  selector:
    app: gitlab
