gitlab/ingress-router.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-gitlab
  namespace: devops
spec:
  redirectScheme:
    scheme: https
    port: "443"
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-http-route
  namespace: devops
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitlab.cmdicncf.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8181
      middlewares:
        - name: redirect-https-gitlab
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-https-route
  namespace: devops
spec:
  entryPoints:
    - websecure
  tls:
    secretName: gitlab.cmdicncf.org-tls
  routes:
    - match: Host(`gitlab.cmdicncf.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gitlab-webservice-default
          port: 8181
